--- a/index.html
+++ b/index.html
@@ -3,184 +3,194 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HVP Üst Analiz Sistemi</title>
+    <title>GoalGem | HVP Analiz</title>
     <style>
         :root {
-            --bg-color: #0f172a;
-            --card-bg: #1e293b;
-            --text-color: #f8fafc;
-            --accent-color: #38bdf8;
-            --button-success: #22c55e;
-            --button-danger: #ef4444;
+            --bg-color: #0b0f1a;
+            --card-bg: #161e2d;
+            --text-color: #e2e8f0;
+            --accent: #38bdf8;
+            --btn-green: #10b981;
+            --btn-red: #f43f5e;
+            --input-border: #334155;
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Inter', system-ui, sans-serif;
             background-color: var(--bg-color);
             color: var(--text-color);
             margin: 0;
-            padding: 20px;
+            padding: 10px;
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            justify-content: center;
         }
 
         .container {
-            max-width: 900px;
             width: 100%;
+            max-width: 850px;
+            background: var(--card-bg);
+            padding: 15px;
+            border-radius: 12px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.5);
         }
 
         .header {
             text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .match-input-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-
-        .team-card {
-            background-color: var(--card-bg);
-            padding: 20px;
-            border-radius: 12px;
-            border: 2px solid #334155;
-        }
-
-        h3 { color: var(--accent-color); margin-top: 0; }
-
-        .input-group {
             margin-bottom: 15px;
         }
 
+        .header h1 {
+            font-size: 1.5rem;
+            color: var(--accent);
+            margin: 0;
+            letter-spacing: 1px;
+        }
+
+        .header p { font-size: 0.75rem; color: #94a3b8; margin: 5px 0 0; }
+
+        .grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+        }
+
+        .team-box {
+            background: #1e293b;
+            padding: 12px;
+            border-radius: 8px;
+            border: 1px solid var(--input-border);
+        }
+
+        .team-box h3 {
+            font-size: 0.9rem;
+            margin: 0 0 10px;
+            text-align: center;
+            border-bottom: 1px solid #334155;
+            padding-bottom: 5px;
+        }
+
+        .field { margin-bottom: 8px; }
+
         label {
             display: block;
-            font-size: 0.85rem;
-            margin-bottom: 5px;
+            font-size: 0.7rem;
             color: #94a3b8;
+            margin-bottom: 2px;
         }
 
         input {
             width: 100%;
             background: #0f172a;
-            border: 1px solid #475569;
+            border: 1px solid var(--input-border);
             color: white;
-            padding: 8px;
-            border-radius: 6px;
-            box-sizing: border-box;
+            padding: 5px 8px;
+            border-radius: 4px;
+            font-size: 0.8rem;
             outline: none;
         }
 
-        input:focus { border-color: var(--accent-color); }
+        input:focus { border-color: var(--accent); }
 
-        .actions {
+        .btns {
             display: flex;
             gap: 10px;
-            justify-content: center;
-            margin-bottom: 30px;
+            margin: 15px 0;
         }
 
         button {
-            padding: 12px 30px;
-            border-radius: 8px;
+            flex: 1;
+            padding: 8px;
+            font-size: 0.85rem;
+            font-weight: 600;
+            border-radius: 6px;
             border: none;
             cursor: pointer;
-            font-weight: bold;
-            transition: 0.3s;
+            transition: 0.2s;
         }
 
-        .btn-analyze { background-color: var(--button-success); color: white; }
-        .btn-clear { background-color: var(--button-danger); color: white; }
-        button:hover { opacity: 0.8; transform: translateY(-2px); }
+        .analyze { background: var(--btn-green); color: white; }
+        .clear { background: var(--btn-red); color: white; }
+        button:hover { opacity: 0.9; transform: scale(1.02); }
 
-        #resultArea {
+        #res {
+            padding: 10px;
+            border-radius: 6px;
             text-align: center;
-            padding: 20px;
-            border-radius: 12px;
-            margin-bottom: 30px;
+            margin-bottom: 15px;
             display: none;
+            font-size: 0.9rem;
+            font-weight: bold;
         }
 
-        .history {
-            width: 100%;
-            background-color: var(--card-bg);
-            border-radius: 12px;
-            padding: 20px;
+        .history-section {
+            border-top: 1px solid #334155;
+            padding-top: 10px;
+            max-height: 150px;
+            overflow-y: auto;
         }
 
         table {
             width: 100%;
+            font-size: 0.75rem;
             border-collapse: collapse;
-            margin-top: 10px;
         }
 
-        th, td {
-            text-align: left;
-            padding: 12px;
-            border-bottom: 1px solid #334155;
-        }
+        th { text-align: left; color: var(--accent); padding: 5px; }
+        td { padding: 5px; border-bottom: 1px solid #2d3748; }
 
-        th { color: var(--accent-color); }
+        /* Scrollbar */
+        ::-webkit-scrollbar { width: 5px; }
+        ::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
     </style>
 </head>
 <body>
 
 <div class="container">
     <div class="header">
-        <h1>HVP Üst Tahmin Sistemi</h1>
-        <p>Akan Oyun ve Savunma Riski Analizi</p>
+        <h1>GoalGem</h1>
+        <p>HVP & Savunma Çatışma Analizi</p>
     </div>
 
-    <div class="match-input-grid">
-        <div class="team-card" id="teamA">
-            <h3>A Takımı (Ev)</h3>
-            <div class="input-group"><label>npxG</label><input type="number" step="0.01" class="npxG"></div>
-            <div class="input-group"><label>G-xG</label><input type="number" step="0.01" class="GxG"></div>
-            <div class="input-group"><label>Touches in Box</label><input type="number" class="tib"></div>
-            <div class="input-group"><label>PrgP + PrgC</label><input type="number" class="prg"></div>
-            <div class="input-group"><label>Direct Speed (m/s)</label><input type="number" step="0.1" class="ds"></div>
-            <div class="input-group"><label>Def. Line (m)</label><input type="number" class="dl"></div>
+    <div class="grid">
+        <div class="team-box" id="A">
+            <h3>A TAKIMI</h3>
+            <div class="field"><label>npxG</label><input type="number" step="0.01" class="npxG"></div>
+            <div class="field"><label>G - xG</label><input type="number" step="0.01" class="GxG"></div>
+            <div class="field"><label>Touches in Box</label><input type="number" class="tib"></div>
+            <div class="field"><label>PrgP + PrgC</label><input type="number" class="prg"></div>
+            <div class="field"><label>Direct Speed (m/s)</label><input type="number" step="0.1" class="ds"></div>
+            <div class="field"><label>Def. Line (m)</label><input type="number" class="dl"></div>
         </div>
 
-        <div class="team-card" id="teamB">
-            <h3>B Takımı (Dep)</h3>
-            <div class="input-group"><label>npxG</label><input type="number" step="0.01" class="npxG"></div>
-            <div class="input-group"><label>G-xG</label><input type="number" step="0.01" class="GxG"></div>
-            <div class="input-group"><label>Touches in Box</label><input type="number" class="tib"></div>
-            <div class="input-group"><label>PrgP + PrgC</label><input type="number" class="prg"></div>
-            <div class="input-group"><label>Direct Speed (m/s)</label><input type="number" step="0.1" class="ds"></div>
-            <div class="input-group"><label>Def. Line (m)</label><input type="number" class="dl"></div>
+        <div class="team-box" id="B">
+            <h3>B TAKIMI</h3>
+            <div class="field"><label>npxG</label><input type="number" step="0.01" class="npxG"></div>
+            <div class="field"><label>G - xG</label><input type="number" step="0.01" class="GxG"></div>
+            <div class="field"><label>Touches in Box</label><input type="number" class="tib"></div>
+            <div class="field"><label>PrgP + PrgC</label><input type="number" class="prg"></div>
+            <div class="field"><label>Direct Speed (m/s)</label><input type="number" step="0.1" class="ds"></div>
+            <div class="field"><label>Def. Line (m)</label><input type="number" class="dl"></div>
         </div>
     </div>
 
-    <div class="actions">
-        <button class="btn-analyze" onclick="analyzeMatch()">ANALİZ ET</button>
-        <button class="btn-clear" onclick="clearForm()">TEMİZLE</button>
+    <div class="btns">
+        <button class="analyze" onclick="run()">ANALİZ ET</button>
+        <button class="clear" onclick="reset()">TEMİZLE</button>
     </div>
 
-    <div id="resultArea"></div>
+    <div id="res"></div>
 
-    <div class="history">
-        <h3>Geçmiş Analizler</h3>
-        <table id="historyTable">
-            <thead>
-                <tr>
-                    <th>Maç</th>
-                    <th>HVP Ort.</th>
-                    <th>Üst Yüzdesi</th>
-                    <th>Durum</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
+    <div class="history-section">
+        <table>
+            <thead><tr><th>Maç</th><th>HVP</th><th>Üst %</th><th>Sonuç</th></tr></thead>
+            <tbody id="hist"></tbody>
         </table>
     </div>
 </div>
 
 <script>
-    function analyzeMatch() {
-        const getData = (id) => ({
+    function run() {
+        const get = (id) => ({
             npxG: parseFloat(document.querySelector(`#${id} .npxG`).value) || 0,
             GxG: parseFloat(document.querySelector(`#${id} .GxG`).value) || 0,
             tib: parseFloat(document.querySelector(`#${id} .tib`).value) || 0,
@@ -189,39 +199,32 @@
             dl: parseFloat(document.querySelector(`#${id} .dl`).value) || 0
         });
 
-        const a = getData('teamA');
-        const b = getData('teamB');
+        const a = get('A'), b = get('B');
+        const hvp = (t) => ((t.npxG * 2) + t.prg) / 10 + t.GxG;
+        const hA = hvp(a), hB = hvp(b);
+        const avgH = (hA + hB) / 2;
 
-        // HVP Hesaplama (Senin Formülün)
-        const calcHVP = (t) => ((t.npxG * 2) + t.prg) / 10 + t.GxG;
-        const hvpA = calcHVP(a);
-        const hvpB = calcHVP(b);
-        const avgHVP = (hvpA + hvpB) / 2;
+        let pct = 0;
+        if ((a.npxG + b.npxG) > 2.3) pct += 30;
+        if ((a.tib + b.tib) > 40) pct += 20;
+        if (a.ds > 1.8 || b.ds > 1.8) pct += 20;
+        if (a.dl > 45 || b.dl > 45) pct += 20;
+        if (avgH > 1.4) pct += 10;
 
-        // ÜST YÜZDESİ HESAPLAMA MANTIĞI
-        let score = 0;
-        if ((a.npxG + b.npxG) > 2.30) score += 30;
-        if ((a.tib + b.tib) > 40) score += 20;
-        if (a.ds > 1.8 || b.ds > 1.8) score += 20;
-        if (a.dl > 45 || b.dl > 45) score += 20;
-        if (avgHVP > 1.5) score += 10;
+        const r = document.getElementById('res');
+        r.style.display = 'block';
+        r.style.background = pct >= 75 ? '#064e3b' : '#450a0a';
+        r.innerHTML = `ÜST İHTİMALİ: %${pct} | HVP: ${avgH.toFixed(2)}`;
 
-        const resultArea = document.getElementById('resultArea');
-        resultArea.style.display = 'block';
-        resultArea.style.backgroundColor = score >= 75 ? '#065f46' : '#450a0a';
-        resultArea.innerHTML = `<h2>Üst Bitme Olasılığı: %${score}</h2><p>Ortalama HVP: ${avgHVP.toFixed(2)}</p>`;
-
-        // Geçmişe Ekle
-        const table = document.getElementById('historyTable').getElementsByTagName('tbody')[0];
-        const newRow = table.insertRow(0);
-        newRow.innerHTML = `<td>Maç #${table.rows.length + 1}</td><td>${avgHVP.toFixed(2)}</td><td>%${score}</td><td>${score >= 75 ? '🔥 YÜKSEK' : '⚠️ RİSKLİ'}</td>`;
+        const h = document.getElementById('hist');
+        const row = h.insertRow(0);
+        row.innerHTML = `<td>#${h.rows.length}</td><td>${avgH.toFixed(2)}</td><td>%${pct}</td><td>${pct>=75?'🔥':'⚠️'}</td>`;
     }
 
-    function clearForm() {
-        document.querySelectorAll('input').forEach(input => input.value = '');
-        document.getElementById('resultArea').style.display = 'none';
+    function reset() {
+        document.querySelectorAll('input').forEach(i => i.value = '');
+        document.getElementById('res').style.display = 'none';
     }
 </script>
-
 </body>
 </html>
